<resources>
    <string name="app_name">Отели</string>
    <string name="label__hotel">Отель</string>
    <string name="label__to_choice_apartments">К выбору номера</string>
    <string name="label__about_hotel">Об отеле</string>
    <string name="successfully_paid">Заказ оплачен</string>
    <string name="label__cool">Супер!</string>
    <string name="price_from">от %s</string>
    <string name="price">%s ₽</string>
    <string name="select_room">Выбрать номер</string>
    <string name="more_about_room">Подробнее о номере</string>
    <string name="booking">Бронирование</string>
    <string name="сhip_rating_text">%d %s</string>
    <string name="numbers_of_night_default">%d ночь</string>
    <string name="numbers_of_night_plural_1">%d ночи</string>
    <string name="numbers_of_night_plural_2">%d ночей</string>
    <string name="label__to_pay">Оплатить %s</string>
    <string name="label_room">Номер</string>
    <string name="label_eat">Питание</string>
    <string name="label_hotel">Отель</string>
    <string name="label_numbers_of_night">Кол-во ночей</string>
    <string name="label_country_city">Страна, город</string>
    <string name="label_from_city">Вылет из</string>
    <string name="label_information_about_person">Информация о покупателе</string>
    <string name="label_phone_number">Номер телефона</string>
    <string name="label_email">Почта</string>
    <string name="label_legal">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="label_tour">Тур</string>
    <string name="label_fuel_price">Топливный сбор</string>
    <string name="label_service_price">Сервисный сбор</string>
    <string name="label_all_price">К оплате</string>
    <string name="text_view__success_pay_message">Подтверждение заказа №%d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="try_retry_load_data">Повторить</string>
    <string name="title_successfully_payment">Ваш заказ принят в работу</string>
    <string name="hint_tourist_name">Имя</string>
    <string name="hint_tourist_surname">Фамилия</string>
    <string name="hint_tourist_birthday">День рождения</string>
    <string name="hint_tourist_country">Гражданство</string>
    <string name="hint_tourist_pas_number">Номер загранпаспорта</string>
    <string name="hint_tourist_pas_date">Срок действия загранпаспорта</string>
    <string name="pay_error">Ошибка оплаты</string>
    <string name="add_tourist_title">Добавить туриста</string>
    <string name="tourist">Турист</string>
    <string name="first_tourist">Первый турист</string>
    <string name="second_tourist">Второй турист</string>
    <string name="third_tourist">Третий турист</string>
    <string name="fourth_tourist">Четвёртый турист</string>
    <string name="fifth_tourist">Пятый турист</string>
    <string name="sixth_tourist">Шестой турист</string>
    <string name="seventh_tourist">Седьмой турист</string>
    <string name="eighth_tourist">Восьмой турист</string>
    <string name="nineth_tourist">Девятый турист</string>
    <string name="tenth_tourist">Десятый турист</string>
</resources>