<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginTop="@dimen/medium_indent"
            android:id="@+id/view_pager__apartment_images_slider"
            android:layout_width="match_parent"
            android:layout_height="257dp" />

        <TextView
            android:id="@+id/item__apartment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_indent"
            android:layout_marginTop="@dimen/small_indent"
            android:ellipsize="end"
            android:fontFamily="@font/sf_pro_display_medium"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Стандартный с видом на бассейн или сад" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_indent"
            android:layout_marginTop="@dimen/small_indent"
            android:text="@string/more_about_room"
            android:textColor="@color/blue"
            app:chipBackgroundColor="@color/blue10"
            app:chipStrokeWidth="0dp"
            app:closeIcon="@drawable/arrow_forward"
            app:closeIconTint="@color/blue"
            app:closeIconVisible="true"
            app:ensureMinTouchTargetSize="false" />

        <com.google.android.material.chip.ChipGroup
            android:layout_marginHorizontal="@dimen/medium_indent"
            android:layout_marginTop="@dimen/small_indent"
            android:id="@+id/chip_group__peculiarities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_indent"
            android:layout_marginTop="@dimen/medium_indent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item__apartment_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="123 456 ₽" />

            <TextView
                android:id="@+id/item__apartment_price_per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_indent"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_display_regular"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textColor="#FF828796"
                android:textSize="16sp"
                tools:text="за 7 ночей с перелётом" />

        </LinearLayout>

        <Button
            android:id="@+id/button__select_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_indent"
            android:layout_marginVertical="@dimen/medium_indent"
            android:text="@string/select_room" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>